[package]
name = "rusty"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
totsu = "0.9.1"
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.144", features = ["derive"]}

[toolchain]
channel = "nightly"